--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "micro",
-    "dev": "micro-dev"
+    "dev": "micro-dev -p 4000"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,10 @@
   },
   "homepage": "https://github.com/trride/tride-sandbox#readme",
   "dependencies": {
+    "firebase": "^4.6.1",
     "micro": "^9.0.0",
     "microrouter": "^3.0.0",
-    "mongoose": "^4.13.0"
+    "shortid": "^2.2.8"
   },
   "devDependencies": {
     "micro-dev": "^1.3.0"
